# Ruik-s-Cube

./: .gitignore  CMakeLists.txt
src/: main.cpp  rubiks.h
